--- a/_sass/_main2.scss
+++ b/_sass/_main2.scss
@@ -473,7 +473,7 @@ wiki-enhance {
   border-bottom: 1px solid var(--text);
 }
 .re-A {
-  background: var(--colorGrey);
+  background: var(--color50);
 }
 .re-head {
   background: var(--colorPrimary);
