--- a/_sass/_main2.scss
+++ b/_sass/_main2.scss
@@ -46,8 +46,8 @@ html[data-theme="dark"] {
   --fire: #a50b00;
   --water: #0c4b9e;
   --earth: #087800;
-  --light: #e3891a;
-  --shadow: #4e1aa1;
+  --light: #c97e1a;
+  --shadow: #59398b;
 }
 
 *, *:before, *:after {
