disable selection color

--- a/_sass/_main2.scss
+++ b/_sass/_main2.scss
@@ -392,10 +392,10 @@ footer a {
     margin-top: 20px;
   }
 }
-::selection {
-  background-color: #b3d4fc;
-  text-shadow: none;
-}
+//::selection {
+//  background-color: #b3d4fc;
+//  text-shadow: none;
+//}
 figure {
   margin: 0;
   margin-bottom: 30px;
