Fix dark theme gradient

--- a/_sass/_main2.scss
+++ b/_sass/_main2.scss
@@ -59,6 +59,10 @@ html[data-theme="dark"] {
   --earth: #087800;
   --light: #c97e1a;
   --shadow: #59398b;
+
+  --silver: #7f7f7f;
+  --gold: linear-gradient(195deg, #b1813a, #c4a95b, #b9873d);
+  --rainbow: linear-gradient(195deg, #b53737, #c1ad3b, #37b237, #3aadad, #3737b4);
 }
 
 *, *:before, *:after {
