--- a/_includes/sprite-animation-gallery.html
+++ b/_includes/sprite-animation-gallery.html
@@ -1,16 +1,11 @@
 {% assign style = "" | split: "," %}
-{% if include.width %}
-{% assign s = "--sprite-width: " | append: include.width | append: "px" %}
+{% assign sprite_properties = "width,height,frames,animation,step-func" | split: "," %}
+{% for property in sprite_properties %}
+{% if include[property] %}
+{% assign s = "--sprite-" | append: property | append: ": " | append: include[property] %}
 {% assign style = style | push: s %}
 {% endif %}
-{% if include.height %}
-{% assign s = "--sprite-height: " | append: include.height | append: "px" %}
-{% assign style = style | push: s %}
-{% endif %}
-{% if include.frames %}
-{% assign s = "--sprite-frames: " | append: include.frames %}
-{% assign style = style | push: s %}
-{% endif %}
+{% endfor %}
 
 <div class="sprite-container" style="{{ style | join: ";" }}">
 <div class="sprite-frame" style="background-image: url({{ include.background }})"></div>
