--- a/_sass/_main2.scss
+++ b/_sass/_main2.scss
@@ -10,7 +10,7 @@
   --colorLight: var(--color100);
   --colorPrimary: #ffa726;
   --colorDark: #c77800;
-  --colorGrey: #aaa;
+  --colorGrey: #cacaca;
   --text: #000;
   --textLight: #fff;
   --link: var(--colorDark);
