--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content{% if page.wide_content %}__wider{% endif %}">
     <aside class="wiki-msg">
-        Community survey report (2025) is available now!
-        [<a href="/blog/2025/community-survey-2025/">English version</a>]
-        [<a href="/blog/2025/community-survey-2025.jp/">日本語版</a>]
+        Official translation is finally available (partially) in the game!
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
