--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@ layout: compress
 <main class="content__area">
 <div class="content{% if page.wide_content %}__wider{% endif %}">
     <aside class="wiki-msg">
-        Official translation is finally available (partially) in the game!
+        Official translation is finally available (early release) in the game!
+        You may <a href="https://forms.gle/zPWAL3YmTkWhtN977">send translation feedback</a> to LifeWonders via the Google Forms.
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
