--- a/_sass/_main2.scss
+++ b/_sass/_main2.scss
@@ -233,6 +233,24 @@ h1, h2, h3, h4 {
   font-weight: 600;
   margin: 40px 0 20px;
 }
+h1[id], h2[id], h3[id], h4[id] {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  a {
+    order: 2;
+    opacity: 0;
+    margin-right: 8px;
+    transition: opacity 0.2s ease-in-out;
+    color: var(--colorPrimary);
+  }
+  a::before {
+    content: "#";
+  }
+  &:hover a {
+    opacity: 1;
+  }
+}
 h1 {
   font-size: 32px;
   font-weight: 400;
